<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/login" />

    <TextView
        android:id="@+id/tvIngrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/ingrese_usuario"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvIngrese"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/usuario"
        android:inputType="number"
        android:maxLength="6" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etUsuario"
        android:inputType="numberPassword"
        android:password="true"
        android:maxLength="4"
        android:hint="@string/contra"/>

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etContraseña"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/ingresar"
        android:drawableTop="@drawable/login2"/>

</RelativeLayout>