<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:drawableTop="@drawable/exit"
        android:text="@string/finalizar_sesion" />

    <Button
        android:id="@+id/btnListaUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/people"
        android:text="@string/listado_usuarios"/>

    <Button
        android:id="@+id/btnAgregarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnListaUsuarios"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/add_person"
        android:text="@string/agregar_usuario" />

</RelativeLayout>